// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spinner /> should render with a different text string 1`] = `
<span>
  <i
    className="fa fa-spinner fa-spin"
  />
   
  Hello world!
</span>
`;

exports[`<Spinner /> should render without props 1`] = `
<span>
  <i
    className="fa fa-spinner fa-spin"
  />
   
  Loading...
</span>
`;
